gave the minecraft theme and also  implemented reset option along with responsiveness

--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
 					<p>SHEARS</p>
 				</div>
 			</div>
-			<div class="container">
-				<div class="images">
-					<!---<img class="user-choice-img choice-img" src="assets/paper.webp" />
-					<img class="bot-choice-img choice-img" src="assets/paper.webp" />-->
-				</div>
-			</div>
+			<div class="container"></div>
 			<div class="score">
 				<div class="user players">
 					<img class="photo" src="assets/steve.png" />
@@ -48,6 +43,7 @@
 					<img class="photo" src="assets/villager.webp" />
 				</div>
 			</div>
+			<button class="reset">Reset</button>
 		</div>
 		<script src="script.js"></script>
 	</body>
