--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 				</div>
 				<div class="bot players">
 					<p>
-						Villager Score <br />
+						Villager <br />
+						Score <br />
 						0
 					</p>
 					<img class="photo" src="assets/villager.webp" />
